scss/style.scss
@import url('https://fonts.googleapis.com/css?family=Playfair+Display|Saira+Semi+Condensed');
@import url('//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css');
* {
  padding: 0;
  margin: 0;
  font-size: medium;
}

.c-portfolio {
  position: relative;
  width: 100%;
  
  &__header {
    position: relative;
    width: 100%;
    font-family: 'Playfair Display', serif;
    
    &--main {
      
      @media screen and(min-width: 40rem) {
        margin: 3rem 0rem;
      }
      margin: 1rem 0;
      border-bottom: 1px solid #e2e2e2;
    }
    
    
    &--h3 {
      font-size: 150%;
      font-weight: 500;
      position: relative;
      bottom: 1rem;
      padding: 0 2rem;
      
      @media screen and(min-width: 40rem) {
        padding: 0 4rem;
      }
    }
  }
  
  &__bio {
    @media screen and(min-width: 40rem) {
      margin: 0 4rem;
    }
    margin: 0 2rem;
    width: 40%;
    &--h3 {
      font-family: 'Saira Semi Condensed', sans-serif; 
    }
  }
  &__title {
    font-family: 'Saira Semi Condensed', sans-serif;
    color: #9C9C9C;
  }
  
  &__intro {
    max-width: 80%;
    margin: 5rem auto;
    
    @media screen and(min-width: 40rem) {
      margin: 10rem auto;
      max-width: 60%;
    }
  }
  
  &__text {
    font-family: 'Saira Semi Condensed', sans-serif;
    color: #9C9C9C;
  }
  
  &__quotes {
    max-width: 80%;
    
    @media screen and(min-width: 40rem) {
      max-width: 40%;
    }
    
    margin: 2rem auto;
  }
  
  &__blockquote {
    font-family: 'Saira Semi Condensed', sans-serif;
    font-size: 18px;
    font-style: italic;
    margin: .25rem 0;
    padding: .35rem 40px;
    line-height: 1.45;
    position: relative;
    color: #383838;
    
    &::before {
      display: block;
      padding-left: 10px;
      content: "\201C";
      font-size: 80px;
      position: absolute;
      left: -20px;
      top: -20px;
      color: #7a7a7a;
    }
  }

  &__blockquot-cite {
    color: #999999;
    font-size: 14px;
    display: block;
    margin-top: 5px;
    
    &::before {
      content: "\2014 \2009";
      width: 10%;
      display: block;
      color: #7a7a7a;
    }
  }
  
  &__footer {
    position: relative;
    min-height: calc(100vh - 30vh);
    height: 40%;
    min-width: 100%;
    background: #f94d4d;
    display: block;
  } 
}

.c-social-icons {
  width: 100%;
  min-height: 150px;
  height: 100%;
  position: relative;
  text-align: center;
  display: inline-block;
  bottom: 2rem;
  margin-top: 25%;
  
  &::after {
    content: '';
    clear: both;
    overflow: auto;
    display: table;
  }
  
  &__text {
    font-family: 'Saira Semi Condensed', sans-serif;
  }
  
  &__item {
    width: 150px;
    height: 150px;
    background-color: #fff;
    display: inline-block;
    margin: 0 16px;
    font-weight: 500;
    text-align: center;
    text-decoration: none;
    line-height: 90px;
    color: #f94d4d;
    overflow: hidden;
    box-shadow: 0 4px 4px rgba(0,0,0,.2);
    
    &::before {
      //background-color: #424242;
      display: block;
      font-size: 4.2rem;
      font-weight: normal;
      line-height: 150px;
      color: #757575;
      
      transition: font-size .5s, line-height .5s;
    }
    &::after {
      content: '';
      clear: both;
      overflow: auto;
      display: table;
    }
    &:hover::before {
      font-size: 200%;
      line-height: 50px;
      max-width: 100%;
   }
  }
}

